Fix alignment on desktop, fix unclickable link on desktop

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,15 +3,15 @@ body {
   color: #3a3a3a;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 header {
   height: 200px;
   color: #ffffff;
   text-transform: uppercase;
-  background: url("../images/header-pexels-victor-freitas-949126.webp") no-repeat
-    center/cover;
+  background: url("../images/header-pexels-victor-freitas-949126.webp")
+    no-repeat center/cover;
 }
 
 #logo {
@@ -88,7 +88,7 @@ main {
   width: 80vw;
   margin-top: -40px;
   margin-bottom: -30px;
-  margin-left: 6%;
+  margin-left: 5%;
 }
 
 .freew {
@@ -97,7 +97,7 @@ main {
   width: 80vw;
   margin-top: -20px;
   margin-bottom: -30px;
-  margin-left: 6%;
+  margin-left: 5%;
 }
 
 .freey {
@@ -106,7 +106,7 @@ main {
   width: 80vw;
   margin-top: -40px;
   margin-bottom: -30px;
-  margin-left: 6%;
+  margin-left: 5%;
 }
 
 .freem {
@@ -115,7 +115,7 @@ main {
   width: 80vw;
   margin-top: -20px;
   margin-bottom: -30px;
-  margin-left: 6%;
+  margin-left: 5%;
 }
 
 .welcome-inside {
@@ -126,8 +126,8 @@ main {
 .image {
   width: 50vw;
   border-radius: 20px;
-  margin-left: 21%;
-  margin-bottom: -50px;
+  margin-left: 23%;
+  margin-bottom: -20%;
   z-index: -10;
   position: relative;
 }
@@ -156,8 +156,28 @@ main {
   z-index: -1;
 }
 
+.black-pop {
+  background-color: #2b2b2b;
+  color: #cacaca;
+  margin-right: 30px;
+  margin-left: 20px;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+.black-pop-side {
+  background-color: #2b2b2b;
+  color: #cacaca;
+  margin-right: 30px;
+  margin-left: 20px;
+  margin-bottom: -30px;
+  padding: 30px;
+  border-radius: 20px;
+}
+
 .text {
   text-align: center;
+  padding: 10px;
 }
 
 .black-inside {
@@ -182,33 +202,14 @@ main {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.black-pop {
-  background-color: #2b2b2b;
-  color: #cacaca;
-  margin-right: 30px;
-  margin-left: 20px;
-  padding: 30px;
-  border-radius: 20px;
-}
-
-.black-pop-side {
-  background-color: #2b2b2b;
-  color: #cacaca;
-  margin-right: 30px;
-  margin-left: 20px;
-  margin-bottom: -30px;
-  padding: 30px;
-  border-radius: 20px;
-}
-
 .shadow {
   box-shadow: 0 0 30px #2a2a2a;
 }
 
 /*YOGA CLASS*/
 #yoga-class {
-  background: url(../images/yoga-class-pexels-cliff-booth-4056723.webp) no-repeat
-    center/cover;
+  background: url(../images/yoga-class-pexels-cliff-booth-4056723.webp)
+    no-repeat center/cover;
   display: flex;
   flex-wrap: wrap;
 }
@@ -470,8 +471,8 @@ footer {
   #logo {
     font-size: 500%;
     margin-top: 20px;
-    margin-right: 15%;
-    letter-spacing: 2px;
+    margin-right: 14%;
+    letter-spacing: 5px;
     line-height: 1;
     text-align: end;
   }
@@ -480,7 +481,7 @@ footer {
     display: flex;
     justify-content: end;
     font-size: large;
-    padding-right: 15%;
+    padding-right: 13%;
   }
 
   nav a {
@@ -501,7 +502,7 @@ footer {
     width: 300px;
     border-radius: 20px;
     z-index: 1;
-  position: relative;
+    position: relative;
   }
 
   #home {
@@ -592,7 +593,6 @@ footer {
 
   .side-image-member {
     margin-top: 10px;
-
   }
 
   .black-inside {
